Add configuration file support

--- a/lhc_test.ipynb
+++ b/lhc_test.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "import numpy as np\n",
-    "from gvm_toolkit import GVMCombination, load_data_file, load_correlation_matrix\n"
+  "from gvm_toolkit import GVMCombination\n"
    ],
    "outputs": [],
    "execution_count": null
@@ -14,10 +13,10 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "data, stat, syst = load_data_file('input_files/data_lhc.txt')\n",
-    "correlations = {}\n",
-    "for name in syst:\n",
-    "    load_correlation_matrix(f'input_files/{name}.txt', name, correlations)\n"
+  "comb = GVMCombination('input_files/config_lhc.txt')\n",
+  "print('mu_hat =', comb.fit_results['mu'])\n",
+  "print('CI =', comb.confidence_interval())\n",
+  "print('GoF =', comb.goodness_of_fit())\n"
    ],
    "outputs": [],
    "execution_count": null
@@ -26,11 +25,7 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "uncertain = { 'JER': 0.3, 'btag': 0.2 }  # example values\n",
-    "comb = GVMCombination(data, stat, syst, correlations, uncertain)\n",
-    "print('mu_hat =', comb.fit_results['mu'])\n",
-    "print('CI =', comb.confidence_interval())\n",
-    "print('GoF =', comb.goodness_of_fit())\n"
+
    ],
    "outputs": [],
    "execution_count": null
