Add tutorial cells for summary map and update

--- a/lhc_test.ipynb
+++ b/lhc_test.ipynb
@@ -130,7 +130,22 @@
    "id": "eca91c1f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "info = comb.input_summary()\n",
+    "info['central']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48fbf9cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['central']['a'] += 0.5\n",
+    "comb.update_inputs(info)\n",
+    "comb.fit_results['mu']"
+   ]
   }
  ],
  "metadata": {
