Expand notebook examples

--- a/lhc_test.ipynb
+++ b/lhc_test.ipynb
@@ -130,7 +130,108 @@
    "id": "eca91c1f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "info = comb.input_summary()\n",
+    "info['central']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48fbf9cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['central']['a'] += 0.5\n",
+    "comb.update_inputs(info)\n",
+    "comb.fit_results['mu']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0f1d08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['stat_error']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b89580dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['stat_corr'][('a', 'b')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f32a1154",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['systematics']['a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78e6cade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['syst_value'][('a', 'JER')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d570c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['syst_corr'][('a', 'b', 'JER')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19833a76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['epsilon']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2e5a60b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['corr_matrix']['JER'][:2, :2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd002432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info['stat_error']['a'] += 0.1\n",
+    "info['stat_corr'][('a','b')] = 0.1\n",
+    "info['syst_value'][('a','JER')] += 0.05\n",
+    "info['syst_corr'][('a','b','JER')] = 0.3\n",
+    "info['epsilon']['JER'] = 0.1\n",
+    "comb.update_inputs(info)\n",
+    "comb.fit_results['mu']"
+   ]
   }
  ],
  "metadata": {
