fixed old example

--- a/lhc_test.ipynb
+++ b/lhc_test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "701cb532",
    "metadata": {},
    "outputs": [
@@ -20,9 +20,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mu_hat = 172.54717208898484\n",
-      "CI = (172.18842208898516, 172.88842208898453, 0.3499999999996817)\n",
-      "GoF = 7.608130089466451\n"
+      "mu_hat = 172.57223124853678\n",
+      "CI = (172.1928562485371, 172.92410624853648, 0.3656249999996817)\n",
+      "GoF = 7.634889666986586\n"
      ]
     }
    ],
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "072d0a51",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.2168414643591758, 14.240723980806544)"
+       "(1.4380166424135754, 14.398244163781655)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "06ad6314",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "        0.  , 0.25, 0.09, 0.09])}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,45 +126,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "eca91c1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "info = comb.input_summary()\n",
-    "info['central']"
+    "info = comb.input_data()\n",
+    "comb.update_data(info)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "48fbf9cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "172.5722175688261"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "info['central']['a'] += 0.5\n",
-    "comb.update_inputs(info)\n",
+    "info['epsilon']['LHCbJES'] = 0.6\n",
+    "comb.update_data(info)\n",
     "comb.fit_results['mu']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ff0f1d08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 0.54,\n",
+       " 'b': 0.75,\n",
+       " 'c': 1.35,\n",
+       " 'd': 0.41,\n",
+       " 'e': 0.39,\n",
+       " 'f': 0.55,\n",
+       " 'g': 0.43,\n",
+       " 'h': 0.43,\n",
+       " 'i': 0.69,\n",
+       " 'j': 0.18,\n",
+       " 'k': 0.16,\n",
+       " 'l': 0.25,\n",
+       " 'm': 0.77,\n",
+       " 'n': 3.0,\n",
+       " 'o': 0.2}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "info['stat_error']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b89580dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "info['stat_corr'][('a', 'b')]"
+    "info['stat_corr'][('a', 'b')] = 0.1\n"
    ]
   },
   {
@@ -199,10 +235,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "19833a76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LHCJES1': 0.0,\n",
+       " 'LHCJES2': 0.0,\n",
+       " 'LHCJES3': 0.0,\n",
+       " 'LHCbJES': 0.6,\n",
+       " 'LHCgJES': 0.0,\n",
+       " 'LHClJES': 0.0,\n",
+       " 'CMSJES': 0.0,\n",
+       " 'JER': 0.0,\n",
+       " 'leptons': 0.0,\n",
+       " 'btag': 0.0,\n",
+       " 'ptmiss': 0.0,\n",
+       " 'pileup': 0.0,\n",
+       " 'trigger': 0.0,\n",
+       " 'ME': 0.0,\n",
+       " 'LHCrad': 0.0,\n",
+       " 'LHChad': 0.0,\n",
+       " 'CMSbHad': 0.0,\n",
+       " 'CR': 0.0,\n",
+       " 'UE': 0.0,\n",
+       " 'PDF': 0.0,\n",
+       " 'topPT': 0.0,\n",
+       " 'bkgData': 0.0,\n",
+       " 'bkgMC': 0.0,\n",
+       " 'method': 0.0,\n",
+       " 'other': 0.0}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "info['epsilon']"
    ]
