Add epsilon scan using update_data

--- a/lhc_test.ipynb
+++ b/lhc_test.ipynb
@@ -305,6 +305,99 @@
     "comb.update_inputs(info)\n",
     "comb.fit_results['mu']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from gvm_toolkit import GVMCombination\n",
+    "\n",
+    "comb = GVMCombination('input_files/config_lhc.txt')\n",
+    "systematics = ['LHCbJES', 'btag', 'ME', 'LHCJES1', 'LHCJES2', 'method', 'CMSbHad', 'LHCrad']\n",
+    "eps_grid = np.linspace(0., 0.6, 7)\n",
+    "\n",
+    "cv = {s: [] for s in systematics}\n",
+    "ci = {s: [] for s in systematics}\n",
+    "\n",
+    "for syst in systematics:\n",
+    "    info = comb.input_data()\n",
+    "    for k in info['epsilon']:\n",
+    "        info['epsilon'][k] = 0.0\n",
+    "    for eps in eps_grid:\n",
+    "        info['epsilon'][syst] = eps\n",
+    "        comb.update_data(info)\n",
+    "        cv[syst].append(comb.fit_results['mu'])\n",
+    "        ci[syst].append(comb.confidence_interval())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,6))\n",
+    "for s in systematics:\n",
+    "    plt.plot(eps_grid, cv[s], '--o', label=s)\n",
+    "plt.xlabel(r'$\\epsilon_s$')\n",
+    "plt.ylabel('Central Value $m_t$ (GeV)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,6))\n",
+    "for s in systematics:\n",
+    "    vals = np.array(cv[s])\n",
+    "    rel = (vals - vals[0]) / vals[0] * 100\n",
+    "    plt.plot(eps_grid, rel, '--o', label=s)\n",
+    "plt.xlabel(r'$\\epsilon_s$')\n",
+    "plt.ylabel('Central Value Variation (%)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,6))\n",
+    "for s in systematics:\n",
+    "    half = [c[2] for c in ci[s]]\n",
+    "    plt.plot(eps_grid, half, '--o', label=s)\n",
+    "plt.xlabel(r'$\\epsilon_s$')\n",
+    "plt.ylabel('68% CI Half Size (GeV)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,6))\n",
+    "for s in systematics:\n",
+    "    half = np.array([c[2] for c in ci[s]])\n",
+    "    rel = (half - half[0]) / half[0] * 100\n",
+    "    plt.plot(eps_grid, rel, '--o', label=s)\n",
+    "plt.xlabel(r'$\\epsilon_s$')\n",
+    "plt.ylabel('CI Half Size Variation (%)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n"
+   ]
   }
  ],
  "metadata": {
