Improve epsilon scan plots

--- a/lhc_test.ipynb
+++ b/lhc_test.ipynb
@@ -305,6 +305,115 @@
     "comb.update_inputs(info)\n",
     "comb.fit_results['mu']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from gvm_toolkit import GVMCombination\n",
+    "\n",
+    "comb = GVMCombination('input_files/config_lhc.txt')\n",
+    "systematics = ['LHCbJES', 'btag', 'ME', 'LHCJES1', 'LHCJES2', 'method', 'CMSbHad', 'LHCrad']\n",
+    "eps_grid = np.linspace(0., 0.6, 7)\n",
+    "\n",
+    "base_mu = comb.fit_results['mu']\n",
+    "base_ci = comb.confidence_interval()[2]\n",
+    "\n",
+    "cv = {s: [] for s in systematics}\n",
+    "ci = {s: [] for s in systematics}\n",
+    "\n",
+    "for syst in systematics:\n",
+    "    info = comb.input_data()\n",
+    "    for k in info['epsilon']:\n",
+    "        info['epsilon'][k] = 0.0\n",
+    "    for eps in eps_grid:\n",
+    "        info['epsilon'][syst] = eps\n",
+    "        comb.update_data(info)\n",
+    "        cv[syst].append(comb.fit_results['mu'])\n",
+    "        ci[syst].append(comb.confidence_interval()[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(11,7))\n",
+    "for s in systematics:\n",
+    "    plt.plot(eps_grid, cv[s], '--o', label=s)\n",
+    "plt.axhline(base_mu, color='black', linestyle='dashdot', label='Original Combination')\n",
+    "plt.xlabel(r'$\\epsilon_s$', fontsize=24)\n",
+    "plt.ylabel('Central Value $m_t$ (GeV)', fontsize=20)\n",
+    "plt.xlim(0.0, 0.6)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.grid(True)\n",
+    "plt.tick_params(axis='both', which='major', labelsize=16)\n",
+    "plt.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(11,7))\n",
+    "for s in systematics:\n",
+    "    vals = np.array(cv[s])\n",
+    "    rel = (vals - vals[0]) / vals[0] * 100\n",
+    "    plt.plot(eps_grid, rel, '--o', label=s)\n",
+    "plt.xlabel(r'$\\epsilon_s$', fontsize=20)\n",
+    "plt.ylabel('Central Value Variation (%)', fontsize=14)\n",
+    "plt.xlim(0.0, 0.6)\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tick_params(axis='both', which='major', labelsize=14)\n",
+    "plt.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(11,7))\n",
+    "for s in systematics:\n",
+    "    plt.plot(eps_grid, ci[s], '--o', label=s)\n",
+    "plt.axhline(base_ci, color='black', linestyle='dashdot', label='Original Combination')\n",
+    "plt.xlabel(r'$\\epsilon_s$', fontsize=24)\n",
+    "plt.ylabel('$68.3\\%$ Half-Size Confidence Interval (GeV)', fontsize=20)\n",
+    "plt.xlim(0.0, 0.6)\n",
+    "plt.legend(fontsize=12, loc='lower left')\n",
+    "plt.grid(True)\n",
+    "plt.tick_params(axis='both', which='major', labelsize=16)\n",
+    "plt.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(11,7))\n",
+    "for s in systematics:\n",
+    "    half = np.array(ci[s])\n",
+    "    rel = (half - half[0]) / half[0] * 100\n",
+    "    plt.plot(eps_grid, rel, '--o', label=s)\n",
+    "plt.xlabel(r'$\\epsilon_s$', fontsize=20)\n",
+    "plt.ylabel('Percentage Variation (%)', fontsize=14)\n",
+    "plt.xlim(0.0, 0.6)\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tick_params(axis='both', which='major', labelsize=14)\n",
+    "plt.tight_layout()\n"
+   ]
   }
  ],
  "metadata": {
