Update lhc_test tutorial

--- a/lhc_test.ipynb
+++ b/lhc_test.ipynb
@@ -153,7 +153,7 @@
     }
    ],
    "source": [
-    "info['epsilon']['LHCbJES'] = 0.6\n",
+    "info['syst']['LHCbJES']['epsilon'] = 0.6\n",
     "comb.update_data(info)\n",
     "comb.fit_results['mu']"
    ]
@@ -190,7 +190,7 @@
     }
    ],
    "source": [
-    "info['stat_error']"
+    "info['data']['measurements']"
    ]
   },
   {
@@ -200,7 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info['stat_corr'][('a', 'b')] = 0.1\n"
+    "info['data']['V_stat'][0, 1] = 0.1\n",
+    "info['data']['V_stat'][1, 0] = 0.1\n"
    ]
   },
   {
@@ -210,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info['systematics']['JER']"
+    "info['syst']['JER']"
    ]
   },
   {
@@ -220,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info['systematics']['JER']['a']"
+    "info['syst']['JER']['values']['a']"
    ]
   },
   {
@@ -230,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info['syst_corr']['JER'][('a', 'b')]"
+    "info['syst']['JER']['corr'][0, 1]"
    ]
   },
   {
@@ -275,7 +276,7 @@
     }
    ],
    "source": [
-    "info['epsilon']"
+    "{k: v['epsilon'] for k, v in info['syst'].items()}"
    ]
   },
   {
@@ -295,14 +296,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info['stat_error']['a'] += 0.1\n",
-    "info['stat_corr'][('a','b')] = 0.1\n",
-    "info['stat_corr'][('b','a')] = 0.1\n",
-    "info['systematics']['JER']['a'] += 0.05\n",
-    "info['syst_corr']['JER'][('a','b')] = 0.3\n",
-    "info['syst_corr']['JER'][('b','a')] = 0.3\n",
-    "info['epsilon']['JER'] = 0.1\n",
-    "comb.update_inputs(info)\n",
+    "info['data']['measurements']['a']['stat'] += 0.1\n",
+    "info['data']['V_stat'][0,1] = 0.1\n",
+    "info['data']['V_stat'][1,0] = 0.1\n",
+    "info['syst']['JER']['values']['a'] += 0.05\n",
+    "info['syst']['JER']['corr'][0,1] = 0.3\n",
+    "info['syst']['JER']['corr'][1,0] = 0.3\n",
+    "info['syst']['JER']['epsilon'] = 0.1\n",
+    "comb.update_data(info)\n",
     "comb.fit_results['mu']"
    ]
   },
@@ -329,10 +330,10 @@
     "\n",
     "for syst in systematics:\n",
     "    info = comb.input_data()\n",
-    "    for k in info['epsilon']:\n",
-    "        info['epsilon'][k] = 0.0\n",
+    "    for k in info['syst']:\n",
+    "        info['syst'][k]['epsilon'] = 0.0\n",
     "    for eps in eps_grid:\n",
-    "        info['epsilon'][syst] = eps\n",
+    "        info['syst'][syst]['epsilon'] = eps\n",
     "        comb.update_data(info)\n",
     "        cv[syst].append(comb.fit_results['mu'])\n",
     "        ci[syst].append(comb.confidence_interval()[2])"
