Clarify modification tip using input_data

--- a/tutorials/toy/correlations_tutorial.ipynb
+++ b/tutorials/toy/correlations_tutorial.ipynb
@@ -124,26 +124,32 @@
    "id": "9e009afb",
    "metadata": {},
    "source": [
-    "## Tip: modifying the combination\n",
-    "You can change measurements, uncertainties or correlations directly on a `GVMCombination` instance and refit without editing a configuration file.\n"
+  "## Tip: modifying the combination\n",
+  "You can obtain the current input with `input_data()` and modify the returned dictionary. \n",
+  "After editing, pass it to `update_data()` to apply the changes before refitting.\n"
    ]
   },
   {
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "comb = GVMCombination('correlations/decorrelated.yaml')\n",
-    "\n",
-    "# modify central value and systematic shift\n",
-    "comb.y[0] = 2.0\n",
-    "comb.syst['sys1'][0] = 0.5\n",
-    "\n",
-    "# change the correlation matrix\n",
-    "comb.corr['sys1'] = np.array([[1.0, 0.3], [0.3, 1.0]])\n",
-    "\n",
-    "# refit with updated inputs\n",
-    "comb.fit_results = comb.minimize()\n",
-    "print(f\"updated mu_hat={comb.fit_results['mu']:.4f}\")\n"
+  "comb = GVMCombination('correlations/decorrelated.yaml')\n",
+  "\n",
+  "# extract current configuration\n",
+  "info = comb.input_data()\n",
+  "\n",
+  "# change measurement and systematic values\n",
+  "info['data']['measurements']['m1']['central'] = 2.0\n",
+  "info['syst']['sys1']['values']['m1'] = 0.5\n",
+  "\n",
+  "# update the systematic to be dependent with a new correlation matrix\n",
+  "info['syst']['sys1']['type'] = 'dependent'\n",
+  "info['syst']['sys1']['corr'] = np.array([[1.0, 0.3], [0.3, 1.0]])\n",
+  "\n",
+  "# apply modifications and refit\n",
+  "comb.update_data(info)\n",
+  "comb.fit_results = comb.minimize()\n",
+  "print(f\"updated mu_hat={comb.fit_results['mu']:.4f}\")\n"
    ],
    "execution_count": null,
    "outputs": []
