Add error-on-error exploration

--- a/tutorials/toy/correlations_tutorial.ipynb
+++ b/tutorials/toy/correlations_tutorial.ipynb
@@ -124,35 +124,307 @@
    "id": "9e009afb",
    "metadata": {},
    "source": [
-  "## Tip: modifying the combination\n",
-  "You can obtain the current input with `input_data()` and modify the returned dictionary. \n",
-  "After editing, pass it to `update_data()` to apply the changes before refitting.\n"
+    "## Tip: modifying the combination\n",
+    "You can obtain the current input with `input_data()` and modify the returned dictionary. \n",
+    "After editing, pass it to `update_data()` to apply the changes before refitting.\n"
    ]
   },
   {
    "cell_type": "code",
    "metadata": {},
    "source": [
-  "comb = GVMCombination('correlations/decorrelated.yaml')\n",
-  "\n",
-  "# extract current configuration\n",
-  "info = comb.input_data()\n",
-  "\n",
-  "# change measurement and systematic values\n",
-  "info['data']['measurements']['m1']['central'] = 2.0\n",
-  "info['syst']['sys1']['values']['m1'] = 0.5\n",
-  "\n",
-  "# update the systematic to be dependent with a new correlation matrix\n",
-  "info['syst']['sys1']['type'] = 'dependent'\n",
-  "info['syst']['sys1']['corr'] = np.array([[1.0, 0.3], [0.3, 1.0]])\n",
-  "\n",
-  "# apply modifications and refit\n",
-  "comb.update_data(info)\n",
-  "comb.fit_results = comb.minimize()\n",
-  "print(f\"updated mu_hat={comb.fit_results['mu']:.4f}\")\n"
+    "comb = GVMCombination('correlations/decorrelated.yaml')\n",
+    "\n",
+    "# extract current configuration\n",
+    "info = comb.input_data()\n",
+    "\n",
+    "# change measurement and systematic values\n",
+    "info['data']['measurements']['m1']['central'] = 2.0\n",
+    "info['syst']['sys1']['values']['m1'] = 0.5\n",
+    "\n",
+    "# update the systematic to be dependent with a new correlation matrix\n",
+    "info['syst']['sys1']['type'] = 'dependent'\n",
+    "info['syst']['sys1']['corr'] = np.array([[1.0, 0.3], [0.3, 1.0]])\n",
+    "\n",
+    "# apply modifications and refit\n",
+    "comb.update_data(info)\n",
+    "comb.fit_results = comb.minimize()\n",
+    "print(f\"updated mu_hat={comb.fit_results['mu']:.4f}\")\n"
    ],
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Effect of error-on-error\n",
+    "We now vary the error-on-error parameter ($\\epsilon$) from 0 to 0.6 while also changing the measurement central values to $\\pm1$, $\\pm2$ and $\\pm3$. This shows how the compatibility of the inputs modifies the combination results. Each scenario below produces three plots for the central value, the confidence interval half-size and the goodness-of-fit.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decorrelated\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "eps_grid = np.linspace(0., 0.6, 7)\n",
+    "y_vals = [1, 2, 3]\n",
+    "comb = GVMCombination('correlations/decorrelated.yaml')\n",
+    "base_info = comb.input_data()\n",
+    "cv = {y: [] for y in y_vals}\n",
+    "ci = {y: [] for y in y_vals}\n",
+    "gof = {y: [] for y in y_vals}\n",
+    "for y in y_vals:\n",
+    "    for eps in eps_grid:\n",
+    "        info = deepcopy(base_info)\n",
+    "        info['data']['measurements'][0]['central'] = float(y)\n",
+    "        info['data']['measurements'][1]['central'] = -float(y)\n",
+    "        info['syst']['sys1']['epsilon'] = float(eps)\n",
+    "        comb.update_data(info)\n",
+    "        cv[y].append(comb.fit_results['mu'])\n",
+    "        ci[y].append(comb.confidence_interval()[2])\n",
+    "        gof[y].append(comb.goodness_of_fit())\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, cv[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('Central value', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, ci[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('68% half-size CI', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, gof[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel(r'$\\chi^2$', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diagonal correlation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "eps_grid = np.linspace(0., 0.6, 7)\n",
+    "y_vals = [1, 2, 3]\n",
+    "comb = GVMCombination('correlations/diag_corr.yaml')\n",
+    "base_info = comb.input_data()\n",
+    "cv = {y: [] for y in y_vals}\n",
+    "ci = {y: [] for y in y_vals}\n",
+    "gof = {y: [] for y in y_vals}\n",
+    "for y in y_vals:\n",
+    "    for eps in eps_grid:\n",
+    "        info = deepcopy(base_info)\n",
+    "        info['data']['measurements'][0]['central'] = float(y)\n",
+    "        info['data']['measurements'][1]['central'] = -float(y)\n",
+    "        info['syst']['sys1']['epsilon'] = float(eps)\n",
+    "        comb.update_data(info)\n",
+    "        cv[y].append(comb.fit_results['mu'])\n",
+    "        ci[y].append(comb.confidence_interval()[2])\n",
+    "        gof[y].append(comb.goodness_of_fit())\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, cv[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('Central value', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, ci[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('68% half-size CI', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, gof[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel(r'$\\chi^2$', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fully correlated\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "eps_grid = np.linspace(0., 0.6, 7)\n",
+    "y_vals = [1, 2, 3]\n",
+    "comb = GVMCombination('correlations/full_corr.yaml')\n",
+    "base_info = comb.input_data()\n",
+    "cv = {y: [] for y in y_vals}\n",
+    "ci = {y: [] for y in y_vals}\n",
+    "gof = {y: [] for y in y_vals}\n",
+    "for y in y_vals:\n",
+    "    for eps in eps_grid:\n",
+    "        info = deepcopy(base_info)\n",
+    "        info['data']['measurements'][0]['central'] = float(y)\n",
+    "        info['data']['measurements'][1]['central'] = -float(y)\n",
+    "        info['syst']['sys1']['epsilon'] = float(eps)\n",
+    "        comb.update_data(info)\n",
+    "        cv[y].append(comb.fit_results['mu'])\n",
+    "        ci[y].append(comb.confidence_interval()[2])\n",
+    "        gof[y].append(comb.goodness_of_fit())\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, cv[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('Central value', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, ci[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('68% half-size CI', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, gof[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel(r'$\\chi^2$', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hybrid correlation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "eps_grid = np.linspace(0., 0.6, 7)\n",
+    "y_vals = [1, 2, 3]\n",
+    "comb = GVMCombination('correlations/hybrid_corr.yaml')\n",
+    "base_info = comb.input_data()\n",
+    "cv = {y: [] for y in y_vals}\n",
+    "ci = {y: [] for y in y_vals}\n",
+    "gof = {y: [] for y in y_vals}\n",
+    "for y in y_vals:\n",
+    "    for eps in eps_grid:\n",
+    "        info = deepcopy(base_info)\n",
+    "        info['data']['measurements'][0]['central'] = float(y)\n",
+    "        info['data']['measurements'][1]['central'] = -float(y)\n",
+    "        info['syst']['sys1']['epsilon'] = float(eps)\n",
+    "        comb.update_data(info)\n",
+    "        cv[y].append(comb.fit_results['mu'])\n",
+    "        ci[y].append(comb.confidence_interval()[2])\n",
+    "        gof[y].append(comb.goodness_of_fit())\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, cv[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('Central value', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, ci[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel('68% half-size CI', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(11,7))\n",
+    "for y in y_vals:\n",
+    "    plt.plot(eps_grid, gof[y], '--o', label=f'y=\u00b1{y}')\n",
+    "plt.xlabel(r'$\\epsilon$', fontsize=24)\n",
+    "plt.ylabel(r'$\\chi^2$', fontsize=20)\n",
+    "plt.grid(True)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
