Save section 4 plots as PDF

--- a/tutorials/toy/correlations_tutorial.ipynb
+++ b/tutorials/toy/correlations_tutorial.ipynb
@@ -205,6 +205,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('decorrelated_cv.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -215,6 +216,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('decorrelated_ci.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -225,6 +227,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('decorrelated_gof.pdf')\n",
     "plt.show()\n"
    ]
   },
@@ -271,6 +274,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('diag_cv.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -281,6 +285,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('diag_ci.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -291,6 +296,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('diag_gof.pdf')\n",
     "plt.show()\n"
    ]
   },
@@ -337,6 +343,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('full_cv.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -347,6 +354,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('full_ci.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -357,6 +365,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('full_gof.pdf')\n",
     "plt.show()\n"
    ]
   },
@@ -403,6 +412,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('hybrid_cv.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -413,6 +423,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('hybrid_ci.pdf')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -423,6 +434,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('hybrid_gof.pdf')\n",
     "plt.show()\n"
    ]
   }
