Move tutorial PNGs into output folder and update references

--- a/tutorials/toy/correlations_tutorial.ipynb
+++ b/tutorials/toy/correlations_tutorial.ipynb
@@ -286,7 +286,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('decorrelated_cv.png')\n",
+    "plt.savefig('output/decorrelated_cv.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -298,7 +298,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('decorrelated_ci.png')\n",
+    "plt.savefig('output/decorrelated_ci.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -310,7 +310,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('decorrelated_gof.png')\n",
+    "plt.savefig('output/decorrelated_gof.png')\n",
     "plt.show()\n"
    ]
   },
@@ -407,7 +407,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('diag_cv.png')\n",
+    "plt.savefig('output/diag_cv.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -419,7 +419,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('diag_ci.png')\n",
+    "plt.savefig('output/diag_ci.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -431,7 +431,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('diag_gof.png')\n",
+    "plt.savefig('output/diag_gof.png')\n",
     "plt.show()\n"
    ]
   },
@@ -514,7 +514,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('full_cv.png')\n",
+    "plt.savefig('output/full_cv.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -526,7 +526,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('full_ci.png')\n",
+    "plt.savefig('output/full_ci.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -538,7 +538,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('full_gof.png')\n",
+    "plt.savefig('output/full_gof.png')\n",
     "plt.show()\n"
    ]
   },
@@ -621,7 +621,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('hybrid_cv.png')\n",
+    "plt.savefig('output/hybrid_cv.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -633,7 +633,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('hybrid_ci.png')\n",
+    "plt.savefig('output/hybrid_ci.png')\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(11,7))\n",
@@ -645,7 +645,7 @@
     "plt.grid(True)\n",
     "plt.legend(fontsize=15)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('hybrid_gof.png')\n",
+    "plt.savefig('output/hybrid_gof.png')\n",
     "plt.show()\n"
    ]
   },
